[F] Fix svg grid padding on iOS

--- a/client/src/theme/Components/_grid-project.scss
+++ b/client/src/theme/Components/_grid-project.scss
@@ -87,6 +87,7 @@
         // Relative z-index
         z-index: 0;
         width: auto;
+        max-width: 100%;
         height: 100%;
         max-height: 100%;
         border: 4px solid transparent;
